:bug: Fix text align and padding for titles

--- a/src/app/collection/pages/collection-502/components/title/title.component.scss
+++ b/src/app/collection/pages/collection-502/components/title/title.component.scss
@@ -1,7 +1,6 @@
 .wrapper {
-    padding: 40px;
     max-width: 250px;
-    align-content: center;
+    text-align: center;
 
     .inner {
         position: absolute;
